--- a/src/css/components/lightbox.css
+++ b/src/css/components/lightbox.css
@@ -11,27 +11,38 @@
   right: 0;
   bottom: 0;
   background: rgba(0, 0, 0, 0.8);
-  animation: pop 0.5s ease 0.5s forwards;
+  transform: scale(0);
+  animation: pop 0.5s ease forwards;
+  animation-delay: 0.5s;
+  z-index: 2;
 }
 
 ::backdrop {
   background: rgb(139, 152, 108);
-  animation: slidein 0.5s ease forwards; 
+  animation: slidein 0.5s ease forwards;
+  opacity: 0.5; 
 }
 
-#lightbox::before {
-  content: 'X';
+#close-lightbox {
   position: absolute;
-  background-color: coral;
-  border-radius: 10px;
-  z-index: 3;
+  top: 10px; 
+  right: 10px; 
+  width: 50px;
+  height: 50px;
+  z-index: 10; 
+  background-color: rgba(0,0,0,0.5); 
+  color: white;
+  border: none;
+  border-radius: 25px;
+  cursor: pointer;
+ 
 }
+
 #lightbox img {
   transform: scale(0);
   animation: pop 0.5s ease forwards;
   animation-delay: 0.5s;
-  /* S'assure que l'image est en dessous de la croix */
-  z-index: 2;
+ z-index: 1;
 }
 
 
@@ -42,7 +53,7 @@
   }
 }
 
-/* Keyframes pour l'animation de "pop" */
+
 @keyframes pop {
   to {
       transform: scale(1);
